<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCortes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SellFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view1"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="120dp"
                android:src="@drawable/corte_simples"
                android:contentDescription="@string/corte_simples" />

            <TextView
                android:id="@+id/text_tipo_corte1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/corte_simples_texto"
                android:textSize="20sp"
                android:layout_marginStart="300dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text_valor_corte1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_20_00"
                android:textSize="20sp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="70dp"
                android:textColor="@color/black"/>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="290dp"
                android:layout_marginTop="120dp"
                android:minHeight="48dp"
                android:text="Favoritar"
                android:textSize="12dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view2"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="120dp"

                android:src="@drawable/corte_infantil"
                android:contentDescription="@string/corte_infantil" />

            <TextView
                android:id="@+id/text_tipo_corte2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/corte_infantil_texto"
                android:textSize="20sp"
                android:layout_marginStart="300dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text_valor_corte2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_30_00"
                android:textSize="20sp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="70dp"
                android:textColor="@color/black"/>

            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="290dp"
                android:layout_marginTop="120dp"
                android:minHeight="48dp"
                android:text="Favoritar"
                android:textSize="12dp" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view3"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="120dp"

                android:src="@drawable/lavagem"
                android:contentDescription="@string/lavagem" />

            <TextView
                android:id="@+id/text_tipo_corte3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lavagem_simples"
                android:textSize="20sp"
                android:layout_marginStart="300dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text_valor_corte3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_10_00"
                android:textSize="20sp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="70dp"
                android:textColor="@color/black"/>

            <Switch
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="290dp"
                android:layout_marginTop="120dp"
                android:minHeight="48dp"
                android:text="Favoritar"
                android:textSize="12dp" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view4"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="120dp"

                android:src="@drawable/barba"
                android:contentDescription="@string/corte_de_barba" />

            <TextView
                android:id="@+id/text_tipo_corte4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/barba_simples"
                android:textSize="20sp"
                android:layout_marginStart="300dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text_valor_corte4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_15_00"
                android:textSize="20sp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="70dp"
                android:textColor="@color/black"/>

            <Switch
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="290dp"
                android:layout_marginTop="120dp"
                android:minHeight="48dp"
                android:text="Favoritar"
                android:textSize="12dp" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view5"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="120dp"

                android:src="@drawable/hidratar"
                android:contentDescription="@string/hidrata_o" />

            <TextView
                android:id="@+id/text_tipo_corte5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hidrata_o_simples"
                android:textSize="20sp"
                android:layout_marginStart="300dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text_valor_corte5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_10_00"
                android:textSize="20sp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="70dp"
                android:textColor="@color/black"/>

            <Switch
                android:id="@+id/switch5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="290dp"
                android:layout_marginTop="120dp"
                android:minHeight="48dp"
                android:text="Favoritar"
                android:textSize="12dp" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>
