<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bruno"
            android:contentDescription="@string/foto_do_barbeiro_bruno" />

        <TextView
            android:id="@+id/text_nome1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:text="@string/barbeiro_bruno"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_recomenda1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="220dp"
            android:text="@string/classifica_o"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="200dp"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="124dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/paulo"
            android:contentDescription="@string/foto_do_barbeiro_paulo" />

        <TextView
            android:id="@+id/text_nome2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:text="@string/barbeiro_paulo"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_recomenda2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="220dp"
            android:text="@string/classifica_o"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="200dp"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="124dp" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>